--- a/resources/index.css
+++ b/resources/index.css
@@ -17,7 +17,16 @@
 
 html, body, main {
 	width: 100%;
-	height: 100%;
+}
+
+html, body {
+	background-color: var(--darkest-grey);
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 main {
@@ -91,5 +100,11 @@ h2, p {
 @media only screen and (max-width: 420px) {
 	.criterion h2 {
 		font-size: 1.25rem;
+	}
+}
+
+@media only screen and (min-height: 900px) {
+	html, body {
+		height: 100%;
 	}
 }
